--- a/style/head-mobile-carte.css
+++ b/style/head-mobile-carte.css
@@ -1,3 +1,8 @@
+@media screen and (min-width: 800px){
+  .menu-scroll{
+    display: none;
+  }
+}
 @media screen and (max-width: 800px){
     .container
     {
