--- a/style/menu-scroll.css
+++ b/style/menu-scroll.css
@@ -1,20 +1,41 @@
 
-    .menu-scroll
-    {
-        position: absolute;
-        top: 30px;
-        left: 30px;
-        z-index: 99;
-        background-color: #fff;
-        padding-left: 40px;
-        padding-right: 40px;
-        padding-top:10px ;
-        padding-bottom: 10px;
-        border: 1px solid rgba(189, 29, 29, 0.263);
-        box-shadow: 1px 1px 5px rgba(255, 203, 203, 0.594);
-        display: none;
-    }
-    .menu-scroll a
-    {
-        font-size: 16px;
-    }
+   
+        .menu-scroll
+        {
+            position: absolute;
+            top: 30px;
+            left: 30px;
+            z-index: 99;
+            background-color: #fff;
+            padding-left: 40px;
+            padding-right: 40px;
+            padding-top:10px ;
+            padding-bottom: 10px;
+            border: 1px solid rgba(189, 29, 29, 0.263);
+            box-shadow: 1px 1px 5px rgba(255, 203, 203, 0.594);
+            display: none;
+        }
+        .menu-scroll a
+        {
+            font-size: 16px;
+        }
+        /* .lien-head2 a {
+            color: #585858;
+            font-size: 12px;
+            text-decoration: none;
+            font-family: 'Allan', sans-serif;
+          }
+          .active2 a{
+            color: #ED1B24;
+            font-size: 22px;
+          } */
+    
+  
+    /* @media screen and (min-width: 600px){
+        .menu-scroll{
+            display: none;
+        }
+        /* .menu-scroll a{
+            visibility: hidden;
+        } */
+    }  */
